--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon-32x32.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>SubStep Form</title>
+        <title>Multi Step Form</title>
         <meta
             name="description"
-            content="A substep form application project created with React and TypeScript for study purposes."
+            content="A multi-step form application developed with a strong focus on accessibility, performance, and custom validation."
         />
     </head>
     <body>
